# models/dato_adicional_experiencia_laboral.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -15,6 +16,7 @@ type DatoAdicionalExperienciaLaboral struct {
 	ExperienciaLaboral *ExperienciaLaboral `orm:"column(experiencia_laboral);rel(fk)"`
 	Valor              string              `orm:"column(valor)"`
 	Activo             bool                `orm:"column(activo)"`
+	FechaModificacion  string              `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *DatoAdicionalExperienciaLaboral) TableName() string {
@@ -28,6 +30,9 @@ func init() {
 // AddDatoAdicionalExperienciaLaboral insert a new DatoAdicionalExperienciaLaboral into database and returns
 // last inserted Id on success.
 func AddDatoAdicionalExperienciaLaboral(m *DatoAdicionalExperienciaLaboral) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -127,6 +132,9 @@ func GetAllDatoAdicionalExperienciaLaboral(query map[string]string, fields []str
 func UpdateDatoAdicionalExperienciaLaboralById(m *DatoAdicionalExperienciaLaboral) (err error) {
 	o := orm.NewOrm()
 	v := DatoAdicionalExperienciaLaboral{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
