# models/relacion_cargos.go
@@ -5,15 +5,17 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
 
 type RelacionCargos struct {
-	Id     int    `orm:"column(id);pk;auto"`
-	Padre  *Cargo `orm:"column(padre);rel(fk)"`
-	Hijo   *Cargo `orm:"column(hijo);rel(fk)"`
-	Activo bool   `orm:"column(activo)"`
+	Id                 int     `orm:"column(id);pk;auto"`
+	CargoPadre  			 *Cargo  `orm:"column(cargo_padre);rel(fk)"`
+	CargoHijo   			 *Cargo  `orm:"column(cargo_hijo);rel(fk)"`
+	Activo 						 bool    `orm:"column(activo)"`
+	FechaModificacion  string  `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *RelacionCargos) TableName() string {
@@ -27,6 +29,9 @@ func init() {
 // AddRelacionCargos insert a new RelacionCargos into database and returns
 // last inserted Id on success.
 func AddRelacionCargos(m *RelacionCargos) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -122,6 +127,9 @@ func GetAllRelacionCargos(query map[string]string, fields []string, sortby []str
 func UpdateRelacionCargosById(m *RelacionCargos) (err error) {
 	o := orm.NewOrm()
 	v := RelacionCargos{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
