# models/soporte_experiencia_laboral.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
@@ -14,6 +15,7 @@ type SoporteExperienciaLaboral struct {
 	ExperienciaLaboral *ExperienciaLaboral `orm:"column(experiencia_laboral);rel(fk)"`
 	Documento          int                 `orm:"column(documento)"`
 	Descripcion        string              `orm:"column(descripcion);null"`
+	FechaModificacion  string              `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *SoporteExperienciaLaboral) TableName() string {
@@ -27,6 +29,9 @@ func init() {
 // AddSoporteExperienciaLaboral insert a new SoporteExperienciaLaboral into database and returns
 // last inserted Id on success.
 func AddSoporteExperienciaLaboral(m *SoporteExperienciaLaboral) (id int64, err error) {
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -126,6 +131,9 @@ func GetAllSoporteExperienciaLaboral(query map[string]string, fields []string, s
 func UpdateSoporteExperienciaLaboralById(m *SoporteExperienciaLaboral) (err error) {
 	o := orm.NewOrm()
 	v := SoporteExperienciaLaboral{Id: m.Id}
+	var t time.Time
+	t = time.Now()
+	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
